tests/paczka1/small_fuzzy/78084021.err
Error in line 1: d7NAZJ9 A307 49,9
Error in line 7: A314 A307 49,5
Error in line 10: lkvlMs S968 59,7
